# ppath

./: .gitignore  README.md  environment.yml  pyproject.toml
examples/: cmaq_cfg.json  cmaq_cfg_20251124.json  wrf_cfg.json  wrf_cfg_20251124.json
src/ppath/: cli.py  pp.py  utils.py
tests/: test.py  test_output.py
